--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<title>shashwatpanwar.github.io</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-		<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<link rel="stylesheet" href="jquery-ui.css">
+		<script src="jquery-1.10.2.js"></script>
+		<script src="jquery-ui.js"></script>
 	<link href="animate.css" rel="stylesheet"/>
 	<link href="waypoints.css" rel="stylesheet"/>
-	<script src="js/jquery.waypoints.min.js" type="text/javascript"></script>
-	<script src="js/waypoints.js" type="text/javascript"></script>
+	<script src="jquery.waypoints.min.js" type="text/javascript"></script>
+	<script src="waypoints.js" type="text/javascript"></script>
 
 </head>
 	<body>
@@ -45,9 +45,9 @@
 			<div class="inner3">
 				<section class="os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="1.5s">
 					<div id="buttons">
-						<a href="https://www.linkedin.com/in/shashwat-panwar-734520145/"><img src="http://i66.tinypic.com/2qwl7nk.jpg" height="60" width="60"></a>
-					 	<a href="https://github.com/ShashwatPanwar"><img src="http://oi66.tinypic.com/aufm7l.jpg" height="60" width="60"></a>
-						<a href="mailto:shashwatpanwar17@gmail.com"><img src="http://oi63.tinypic.com/2ufrk2e.jpg" height="60" width="60"></a>
+						<a href="https://www.linkedin.com/in/shashwat-panwar-734520145/"><img src="linkedin.png" height="60" width="60"></a>
+					 	<a href="https://github.com/ShashwatPanwar"><img src="github.png" height="60" width="60"></a>
+						<a href="mailto:shashwatpanwar17@gmail.com"><img src="mail.png" height="60" width="60"></a>
 					</div>
 				</section>
 			</div>
