--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			<div class="inner3">
 				<section class="os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="1.5s">
 					<div id="buttons">
-						<a href="https://www.linkedin.com/in/shashwat-panwar-734520145/"><img src="linkedin.png" height="60" width="60"></a>
-					 	<a href="https://github.com/ShashwatPanwar"><img src="github.png" height="60" width="60"></a>
-						<a href="mailto:shashwatpanwar17@gmail.com"><img src="mail.png" height="60" width="60"></a>
+						<a href="https://www.linkedin.com/in/shashwat-panwar-734520145/"><img src="Logos/linkedin.png" height=5% width=5%></a>
+					 	<a href="https://github.com/ShashwatPanwar"><img src="Logos/github.png" height=5% width=5%></a>
+						<a href="mailto:shashwatpanwar17@gmail.com"><img src="Logos/mail.png" height=5% width=5%></a>
 					</div>
 				</section>
 			</div>
